@@ -42,8 +42,10 @@ void ln_get_apparent_posn(struct ln_equ_posn *mean_position,
 {
 	struct ln_equ_posn proper_position;
 	struct ln_equ_posn aberration_position;
+	struct ln_equ_posn precession_position;
 	
 	ln_get_equ_pm(mean_position, proper_motion, JD, &proper_position);
 	ln_get_equ_aber(&proper_position, JD, &aberration_position);
-	ln_get_equ_prec(&aberration_position, JD, position);
+	ln_get_equ_prec(&aberration_position, JD, &precession_position);
+	ln_get_equ_nut(&precession_position, JD, position);
 }
